--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-redux": "^9.1.2",
